--- a/index.html
+++ b/index.html
@@ -46,6 +46,13 @@
         </header>
 
         <div class="container">
+            <!--Breadcrumbs. This breadcrumbs should be applied to the about us page.-->
+            <div class="row">
+                <ol class="col-12 breadcrumb">
+                    <li class="breadcrumb-item"><a href="./index.html">Home</a></li>
+                    <li class="breadcrumb-item active">About Us</li>
+                </ol>
+            </div>
             <div class="row row-content align-items-center">
                 <div class="col-sm-4 col-md-3 flex-last">
                     <h3>Our Lipsmacking Culinary Creations</h3>
